# Kaleidoscope

./: CMakeLists.txt  Kaleidoscope.cpp  main.cpp  parser.cpp  parser.h  scanner.cpp
include/: code_generation.h  parser.h  scanner.h
src/: parser.cpp  scanner.cpp
